# uv-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/example_package/: README.md  __init__.py  cli.py  main.py
tests/: __init__.py  conftest.py  test_cli.py  test_main.py
